# cc

./: README.md
.github/workflows/: ci.yml  deploy-loan-calculator.yml  docker-publish.yml  worker-ci.yml
divkit-preview/: CLAUDE.md  Dockerfile  README.md  app.py  db.py  handlers.py  pyproject.toml  requirements.txt  screenshot_service.py
divkit-preview/tests/: conftest.py  test_db.py  test_handlers.py  test_screenshot_service.py
divkit-screenshot-worker/: CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
divkit-screenshot-worker/src/: cache.ts  hash.ts  index.ts  request-log.ts  screenshot.ts  template.ts
divkit-screenshot-worker/static/: browser.js.txt  client.css.txt  divkit.html  index.html  requests.html
divkit-screenshot-worker/test/: cache.test.ts  handler.test.ts  hash.test.ts  template.test.ts
loan-calculator/: index.html
mcp-divkit-screenshot/: fetch_assets.sh  pyproject.toml  server.py
