[project]
name = "divkit-preview"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "playwright>=1.40,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-aiohttp>=1.0,<2",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
