[project]
name = "divkit-preview"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "playwright>=1.40,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-aiohttp>=1.0,<2",
    "pytest-asyncio>=0.23,<1",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["playwright.*", "asyncpg.*", "aiohttp.*", "aiohttp"]
ignore_missing_imports = true
