[project]
name = "mcp-divkit-screenshot"
version = "0.1.0"
description = "MCP server for rendering DivKit layouts to PNG screenshots"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "playwright>=1.40,<2",
]

[project.scripts]
mcp-divkit-screenshot = "server:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
